--- a/css/fonticon.css
+++ b/css/fonticon.css
@@ -17,7 +17,7 @@
 	font-variant: normal;
 	text-transform: none;
 	line-height: 1;
-	font-size: 20px;
+	font-size: 1.25rem;
 
 	/* Better Font Rendering =========== */
 	-webkit-font-smoothing: antialiased;
