--- a/scss/foundation.scss
+++ b/scss/foundation.scss
@@ -9,8 +9,14 @@
   Reducing the number of imported components will optimize page speed.
 */
 
+/*
+	J'importe mes fonts custom ;)	
+*/
+@import url(http://fonts.googleapis.com/css?family=Merriweather:300italic,300,700|Oxygen:300);
+
+
 @import "config/settings"; // Default settings file. Uncomment each setting you need to change
-@import "config/custom-settings"; // Or copy the stuff you need to change to this file and uncomment
+// @import "config/custom-settings"; // Or copy the stuff you need to change to this file and uncomment
 
 @import "../bower_components/foundation/scss/foundation/components/grid";
 // @import "../bower_components/foundation/scss/foundation/components/accordion";
@@ -68,3 +74,4 @@
 @import "site/topbar";
 @import "site/hero";
 @import "site/footer";
+@import "site/menu";
