--- a/scss/config/_settings.scss
+++ b/scss/config/_settings.scss
@@ -112,7 +112,7 @@ $steel       : #666666;
 $charcoal    : #555555;
 $tuatara     : #444444;
 $oil         : #333333;
-$jet         : #222222;
+$jet         : #272727;		// CUSTOMED
 $black       : #000000;
 
 // We use these as default colors throughout
@@ -212,26 +212,26 @@ $xlarge-breakpoint: em-calc(1920);
 // $include-html-type-classes: $include-html-classes;
 
 // We use these to control header font styles
-// $header-font-family: $body-font-family;
-// $header-font-weight: $font-weight-normal;
-// $header-font-style: normal;
-// $header-font-color: $jet;
-// $header-line-height: 1.4;
-// $header-top-margin: .2rem;
-// $header-bottom-margin: .5rem;
-// $header-text-rendering: optimizeLegibility;
+$header-font-family: $font-family-sans-serif;
+$header-font-weight: $font-weight-normal;
+$header-font-style: normal;
+$header-font-color: $primary-color;
+$header-line-height: 1.4;
+$header-top-margin: .2rem;
+$header-bottom-margin: .5rem;
+$header-text-rendering: optimizeLegibility;
 
 // We use these to control header font sizes
-// $h1-font-size: rem-calc(44);
-// $h2-font-size: rem-calc(37);
-// $h3-font-size: rem-calc(27);
+$h1-font-size: rem-calc(48);
+$h2-font-size: rem-calc(24);
+$h3-font-size: rem-calc(18);
 // $h4-font-size: rem-calc(23);
 // $h5-font-size: rem-calc(18);
-// $h6-font-size: 1rem;
+$h6-font-size: rem-calc(10);
 
 // We use these to control header size reduction on small screens
-// $h1-font-reduction: rem-calc(10);
-// $h2-font-reduction: rem-calc(10);
+$h1-font-reduction: rem-calc(24);
+$h2-font-reduction: rem-calc(6);
 // $h3-font-reduction: rem-calc(5);
 // $h4-font-reduction: rem-calc(5);
 // $h5-font-reduction: 0;
@@ -249,15 +249,15 @@ $xlarge-breakpoint: em-calc(1920);
 // $small-font-color: scale-color($header-font-color, $lightness: 35%);
 
 // We use these to style paragraphs
-// $paragraph-font-family: inherit;
-// $paragraph-font-weight: $font-weight-normal;
-// $paragraph-font-size: 1rem;
-// $paragraph-line-height: 1.6;
-// $paragraph-margin-bottom: rem-calc(20);
-// $paragraph-aside-font-size: rem-calc(14);
-// $paragraph-aside-line-height: 1.35;
-// $paragraph-aside-font-style: italic;
-// $paragraph-text-rendering: optimizeLegibility;
+$paragraph-font-family: inherit;
+$paragraph-font-weight: $font-weight-normal;
+$paragraph-font-size: 1rem;
+$paragraph-line-height: rem-calc(26);
+$paragraph-margin-bottom: rem-calc(20);
+$paragraph-aside-font-size: rem-calc(14);
+$paragraph-aside-line-height: 1.35;
+$paragraph-aside-font-style: italic;
+$paragraph-text-rendering: optimizeLegibility;
 
 // We use these to style <code> tags
 // $code-color: $oil;
@@ -276,10 +276,10 @@ $xlarge-breakpoint: em-calc(1920);
 // $anchor-font-color-hover: scale-color($anchor-font-color, $lightness: -14%);
 
 // We use these to style the <hr> element
-// $hr-border-width: 1px;
-// $hr-border-style: solid;
-// $hr-border-color: $gainsboro;
-// $hr-margin: rem-calc(20);
+$hr-border-width: 1px;
+$hr-border-style: solid;
+$hr-border-color: $light-gray;
+$hr-margin: rem-calc(50);
 
 // We use these to style lists
 // $list-font-family: $paragraph-font-family;
