--- a/scss/foundation.scss
+++ b/scss/foundation.scss
@@ -70,8 +70,9 @@
 */ 
 
 @import "site/global"; 
-@import "site/wp-admin";
-@import "site/topbar";
-@import "site/hero";
+// @import "site/wp-admin";
+// @import "site/topbar";
+// @import "site/hero";
 @import "site/footer";
 @import "site/menu";
+@import "site/single";
