--- a/scss/site/_footer.scss
+++ b/scss/site/_footer.scss
@@ -1,6 +1,8 @@
 // Add some whitespace above the footer for medium-up screens
 @media #{$medium-up} {
 	footer.row {
-		margin-top: rem-calc(60);
+		height: rem-calc(0);
+		background: rgba($jet, 1);
+
 	}
 }
