--- a/scss/site/_menu.scss
+++ b/scss/site/_menu.scss
@@ -9,7 +9,34 @@
  * Global style for le menu ;)
  */
 
-@media #{$small-up} { 
+@media #{$small-up} {
+	// Avec les listes et la loop, TMTC
+	#main-menu {
+		font-family: $font-family-sans-serif;
+		font-size: rem-calc(14);
+		text-align: center;
+		text-transform: uppercase;
+		ul {
+			li {
+				-webkit-transition: all 150ms;
+				-o-transition: all 150ms;
+				transition: all 150ms;
+				&:hover {
+					a {
+						color: $primary-color;
+						position: relative;
+						&:before {
+							position: absolute;
+							left: 75px;
+							font-family: 'icomoon';
+							content: "\e6f7";
+						}
+					}
+				}
+			}
+		}
+	}
+	// Le bouton pour activer le offcanvas
 	#menu-off-canvas {
 		position: fixed;
 		left: 0;
@@ -17,20 +44,27 @@
 		z-index: 1003;
 		line-height: 0;
 		padding: 20px;
-		background-color: $secondary-color;
-		color: $white;
+		background-color: transparent;
+		color: $jet;
 		-webkit-transition: all 150ms;
 		-o-transition: all 150ms;
 		transition: all 150ms;
 		&:hover {
+			color: $white;
 			background-color: $primary-color;
+		}
+		ul {
+			li {
+				text-align: center;
+
+			}
 		}
 	}
 }
 
 @media #{$small-only} { 
 	#menu-off-canvas {
-		padding: 10px;
+		padding: 5px;
 	}
 }
 
@@ -40,11 +74,16 @@
 
 @media #{$small-up} {
 	.nav-between-articles {
-		  text-align: center;
-		  position: fixed;
-		  left: 0;
-		  bottom: 0;
-		  padding: rem-calc(15);
-		  background: rgba($white, 1);
+		div{
+			text-align: center;
+			&:first-child {
+				text-align: left;
+			}
+			&:last-child {
+				text-align: right;
+			}
+		}
+		// padding: rem-calc(0);
+		background: rgba($white, 1);
 	}
 }
