--- a/scss/foundation.scss
+++ b/scss/foundation.scss
@@ -75,4 +75,5 @@
 // @import "site/hero";
 @import "site/footer";
 @import "site/menu";
-@import "site/single";
+@import "site/main";
+@import "site/home";
