--- a/scss/config/_settings.scss
+++ b/scss/config/_settings.scss
@@ -96,24 +96,24 @@ $font-weight-normal: 300;
 $font-weight-bold: 700;
 
 $white       : #FFFFFF;
-$ghost       : #FAFAFA;
-$snow        : #F9F9F9;
-$vapor       : #F6F6F6;
-$white-smoke : #F5F5F5;
-$silver      : #EFEFEF;
-$smoke       : #EEEEEE;
-$gainsboro   : #DDDDDD;
-$iron        : #CCCCCC;
-$base        : #AAAAAA;
-$aluminum    : #999999;
-$jumbo       : #888888;
-$monsoon     : #777777;
-$steel       : #666666;
-$charcoal    : #555555;
-$tuatara     : #444444;
-$oil         : #333333;
+// $ghost       : #FAFAFA;
+$snow        : #fbfaf7;		// CUSTOMED
+// $vapor       : #F6F6F6;
+// $white-smoke : #F5F5F5;
+// $silver      : #EFEFEF;
+// $smoke       : #EEEEEE;
+// $gainsboro   : #DDDDDD;
+// $iron        : #CCCCCC;
+// $base        : #AAAAAA;
+// $aluminum    : #999999;
+// $jumbo       : #888888;
+// $monsoon     : #777777;
+// $steel       : #666666;
+// $charcoal    : #555555;
+// $tuatara     : #444444;
+// $oil         : #333333;
 $jet         : #272727;		// CUSTOMED
-$black       : #000000;
+// $black       : #000000;
 
 // We use these as default colors throughout
 $primary-color: #57c3fb;		// Le beau bleu un peu éléctrique
