--- a/scss/site/_main.scss
+++ b/scss/site/_main.scss
@@ -1,7 +1,10 @@
-// Main stylesheet for single.php
+// Main stylesheet
 @media #{$small-up} {
 	.padding-page {
 		padding-top: rem-calc(70);
+	}
+	h1, h2 {
+		letter-spacing: rem-calc(2);
 	}
 
 }
