--- a/scss/foundation.scss
+++ b/scss/foundation.scss
@@ -54,7 +54,7 @@
 // @import "../bower_components/foundation/scss/foundation/components/top-bar";
 @import "../bower_components/foundation/scss/foundation/components/type";
 @import "../bower_components/foundation/scss/foundation/components/offcanvas";
-@import "../bower_components/foundation/scss/foundation/components/visibility";
+// @import "../bower_components/foundation/scss/foundation/components/visibility";
 
 /* 
   Font Awesome - (http://fontawesome.io/) :
