--- a/scss/site/_menu.scss
+++ b/scss/site/_menu.scss
@@ -5,6 +5,11 @@
 	min-height: 100vh;
 }
 
+.open-menu-off-canvas {
+	background-color: $white;
+	color: $jet;
+}
+
 /*
  * Global style for le menu ;)
  */
@@ -17,20 +22,16 @@
 		text-align: center;
 		text-transform: uppercase;
 		ul {
+			margin: auto;
+			width: 50%;
 			li {
 				a {
-				-webkit-transition: all 150ms;
-				-o-transition: all 150ms;
-				transition: all 150ms;
+				-webkit-transition: all 300ms;
+				-o-transition: all 300ms;
+				transition: all 300ms;
 					&:hover {
 					color: $primary-color;
 					position: relative;
-						&:before {
-							position: absolute;
-							left: 65px;
-							font-family: 'icomoon';
-							content: "\e6f7";
-						}
 					}	
 					
 				}
@@ -42,7 +43,7 @@
 		position: fixed;
 		left: 0;
 		top: 0;
-		z-index: 1003;
+		z-index: 1008;
 		line-height: 0;
 		padding: 20px;
 		background-color: transparent;
@@ -62,6 +63,7 @@
 		}
 	}
 }
+
 
 @media #{$small-only} { 
 	#menu-off-canvas {
