--- a/scss/config/_settings.scss
+++ b/scss/config/_settings.scss
@@ -79,7 +79,7 @@ $include-html-global-classes: $include-html-classes;
 // $include-html-grid-classes: $include-html-classes;
 // $include-xl-html-grid-classes: false;
 
-$row-width: 100%;
+$row-width: 100vw;
 $total-columns: 12;
 $column-gutter: rem-calc(0);
 
@@ -856,7 +856,7 @@ $include-html-off-canvas-classes: $include-html-classes;
 // $tabbar-header-margin: 0;
 
 // Off Canvas Menu Variables
-$off-canvas-width: 100vw;
+$off-canvas-width: 50vw;
 $off-canvas-bg: $secondary-color;
 $off-canvas-bg-hover: none;
 $off-canvas-bg-active: none;
