--- a/scss/site/_footer.scss
+++ b/scss/site/_footer.scss
@@ -11,14 +11,12 @@
 
 // FOOTER
 
-@media #{$small-up} {
-	#loading {
-		position: absolute; 
-		left: 0; 
-		right: 0; 
-		top: 0; 
-		bottom: 0; 
-		background: $white;
-		z-index: 9999;
-	}
+#loading {
+	position: fixed; 
+	left: 0; 
+	right: 0; 
+	top: 0; 
+	bottom: 0; 
+	background: $white;
+	z-index: 9999;
 }
