--- a/scss/config/_settings.scss
+++ b/scss/config/_settings.scss
@@ -69,9 +69,9 @@
 // $base-line-height: 150%;
 
 // We use this to control whether or not CSS classes come through in the gem files.
-$include-html-classes: true;
+// $include-html-classes: true;
 // $include-print-styles: true;
-$include-html-global-classes: $include-html-classes;
+// $include-html-global-classes: $include-html-classes;
 
 // b. Grid
 // - - - - - - - - - - - - - - - - - - - - - - - - -
@@ -395,9 +395,9 @@ $blockquote-cite-link-color: $blockquote-cite-font-color;
 
 // We use this to control the maximum number of block grid elements per row
 // $block-grid-elements: 12;
-// $block-grid-default-spacing: rem-calc(20);
+$block-grid-default-spacing: rem-calc(0);
 
-// $align-block-grid-to-grid: false;
+$align-block-grid-to-grid: true;
 // @if $align-block-grid-to-grid {$block-grid-default-spacing: $column-gutter;}
 
 // Enables media queries for block-grid classes. Set to false if writing semantic HTML.
@@ -835,7 +835,7 @@ $blockquote-cite-link-color: $blockquote-cite-font-color;
 // - - - - - - - - - - - - - - - - - - - - - - - - -
 
 // Off Canvas Tab Bar Variables
-$include-html-off-canvas-classes: $include-html-classes;
+// $include-html-off-canvas-classes: $include-html-classes;
 
 // $tabbar-bg: $oil;
 // $tabbar-height: rem-calc(45);
