--- a/scss/site/_menu.scss
+++ b/scss/site/_menu.scss
@@ -1,13 +1,15 @@
 /*
  * Quelques modificiations du code existant qui sont nécessaires
  */
-.inner-wrap {
-	min-height: 100vh;
-}
 
-.open-menu-off-canvas {
-	background-color: $white;
-	color: $jet;
+.menu-is-open {
+	background-color: $white !important;
+	color: $jet !important;
+	@include transition(all, 150ms, ease);
+	&:hover {
+		background-color: transparent !important;
+		color: $white !important;
+	}
 }
 
 /*
@@ -18,26 +20,28 @@
 	// Avec les listes et la loop, TMTC
 	#main-menu {
 		font-family: $font-family-sans-serif;
-		font-size: rem-calc(14);
 		text-align: center;
-		text-transform: uppercase;
 		ul {
 			margin: auto;
-			width: 50%;
+			list-style: none;
+			width: 20%;
 			li {
+				display: block;
+				padding: rem-calc(30);
+				font-size: rem-calc(24);
 				a {
-				-webkit-transition: all 300ms;
-				-o-transition: all 300ms;
-				transition: all 300ms;
+					padding: rem-calc(30);
+					@include transition(all, 300ms, ease);
+					color: $white;
 					&:hover {
-					color: $primary-color;
-					position: relative;
-					}	
-					
+						color: $primary-color;
+						box-shadow: inset 0 -4px rgba($primary-color, 1);
+					}		
 				}
 			}
 		}
 	}
+
 	// Le bouton pour activer le offcanvas
 	#menu-off-canvas {
 		position: fixed;
@@ -48,9 +52,10 @@
 		padding: 20px;
 		background-color: transparent;
 		color: $jet;
-		-webkit-transition: all 150ms;
-		-o-transition: all 150ms;
-		transition: all 150ms;
+		@include transition(all, 150ms, ease);
+		span {
+			font-size: rem-calc(20) !important;
+		}
 		&:hover {
 			color: $white;
 			background-color: $primary-color;
@@ -67,7 +72,11 @@
 
 @media #{$small-only} { 
 	#menu-off-canvas {
-		padding: 5px;
+		position: fixed;
+		left: 0;
+		right: 0;
+		padding: rem-calc(10);
+		background-color: rgba($white, 1) !important;
 	}
 }
 
@@ -85,4 +94,21 @@
 			left: 2px;
 		}
 	}
+}
+
+#menu-overlay {
+	position: fixed;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	z-index: 999;
+	background: rgba($secondary-color, .97);
+	transform: translateX(-100%);
+	padding-top: rem-calc(80);
+	@include transition(all, 500ms, ease);
+	&.active {
+		transform: translateX(0);
+	}
+
 }
