--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /*
-Theme Name:         LE Portfolio
+Theme Name:         Portfolio 2015
 Theme URI:          http://alexandrethiebaut.fr/
 Description:        FoundationPress is a WordPress starter theme based on Foundation 5 by Zurb
 Version:            1.0
