MàJ du style Responsive
ATTENTION aux define

--- a/scss/config/_settings.scss
+++ b/scss/config/_settings.scss
@@ -253,7 +253,7 @@ $paragraph-font-family: inherit;
 $paragraph-font-weight: $font-weight-normal;
 $paragraph-font-size: 1rem;
 $paragraph-line-height: rem-calc(26);
-$paragraph-margin-bottom: rem-calc(20);
+$paragraph-margin-bottom: rem-calc(30);
 $paragraph-aside-font-size: rem-calc(14);
 $paragraph-aside-line-height: 1.35;
 $paragraph-aside-font-style: italic;
@@ -297,9 +297,9 @@ $hr-margin: rem-calc(40);
 
 // We use these to style blockquotes
 $blockquote-font-color: scale-color($body-font-color, $lightness: 50%);
-$blockquote-padding: rem-calc(15);
+$blockquote-padding: rem-calc(0 20 0 20);
 $blockquote-border: 1px solid $light-gray;
-$blockquote-cite-font-size: rem-calc(12);
+$blockquote-cite-font-size: rem-calc(11);
 $blockquote-cite-font-color: scale-color($header-font-color, $lightness: 100%);
 $blockquote-cite-link-color: $blockquote-cite-font-color;
 
