--- a/scss/site/_home.scss
+++ b/scss/site/_home.scss
@@ -3,49 +3,57 @@
 
 @media #{$small-up} {
 	.home-thumb {
+		opacity: .15;
 		position: relative;
-		background: rgba($snow, 1);
+		background: rgba($primary-color, 1);
 		overflow: hidden;
-		* {
-			@include transition(all, 500ms, ease-in-out);
-		}
+		@include transition(all, 300ms, ease-in-out);
 		img {
-			opacity: 1;
 			max-width: 100% !important;
 		}
 		h2 {
+			background: rgba($primary-color, .9);
+			color: $white !important;
 			width: 100%;
 			position: absolute;
-			left: -800px;
 			z-index: 800;
-			// bottom: rem-calc(50);
+			bottom: -200px;
 			color: $secondary-color;
 			padding: rem-calc(20);
-			padding-bottom: 0;
+			margin: 0;
 			line-height: rem-calc(26);
 			font-size: $h2-font-size;
-			// border-bottom: solid 1px $secondary-color;
+			@include transition(all, 300ms, ease-in-out);
+
 		}
 		&:hover {
-			img {
-				opacity: .15;
-			}
 			h2 {
-				left: 0;
+				bottom: 0;
 			}
+			opacity: 1;
+			background: rgba($primary-color, .5);
 		}
 	}
-
 }
 
+// Responsive mobile et tablette
 @media #{$small-only} {
 	.home-thumb {
-		img {
-			opacity: .15;
-		}
+		opacity: 1;
 		h2 {
 			text-align: center;
-			left: 0;
+			bottom: 0;
+			font-size: $h3-font-size;
+		}
+	}
+}
+
+@media #{$medium-only} {
+	.home-thumb {
+		opacity: 1;
+		h2 {
+			text-align: center;
+			bottom: 0;
 			font-size: $h3-font-size;
 		}
 	}
