--- a/scss/site/_menu.scss
+++ b/scss/site/_menu.scss
@@ -16,6 +16,22 @@
  * Global style for le menu ;)
  */
 
+ #menu-overlay {
+	@include transform(translateX, -100%);
+	@include transition(all, 500ms, ease);
+	position: fixed;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	z-index: 999;
+	background: rgba($secondary-color, .97);
+	padding-top: rem-calc(80);
+	&.active {
+		@include transform(translateX, 0);
+	}
+}
+
 @media #{$small-up} {
 	// Avec les listes et la loop, TMTC
 	#main-menu {
@@ -24,7 +40,7 @@
 		ul {
 			margin: auto;
 			list-style: none;
-			width: 20%;
+			width: 25%;
 			li {
 				display: block;
 				padding: rem-calc(30);
@@ -69,8 +85,13 @@
 	}
 }
 
-
-@media #{$small-only} { 
+// Responsive sur le menu overlay
+@media #{$small-only} {
+	#main-menu {
+		ul {
+			width: 100%;
+		}
+	}
 	#menu-off-canvas {
 		position: fixed;
 		left: 0;
@@ -80,35 +101,19 @@
 	}
 }
 
-/*
- * Style pour la nav entre articles - Mettre dans _article.scss
- */
-
-@media #{$small-up} {
-	.nav-between-articles {
-		text-align: center;
-		// padding: rem-calc(0);
-		background: rgba($white, 1);
-		.icon-grid {
-			position: relative;
-			left: 2px;
+@media #{$medium-only} {
+	#main-menu {
+		ul {
+			width: 100%;
 		}
 	}
-}
-
-#menu-overlay {
-	@include transform(translateX, -100%);
-	@include transition(all, 500ms, ease);
-	position: fixed;
-	top: 0;
-	bottom: 0;
-	left: 0;
-	right: 0;
-	z-index: 999;
-	background: rgba($secondary-color, .97);
-	padding-top: rem-calc(80);
-	&.active {
-		@include transform(translateX, 0);
+	#menu-off-canvas {
+		position: fixed;
+		left: 0;
+		right: 0;
+		padding: rem-calc(15);
+		background-color: rgba($white, 1) !important;
 	}
-
 }
+
+
