--- a/scss/site/_home.scss
+++ b/scss/site/_home.scss
@@ -3,21 +3,26 @@
 
 @media #{$small-up} {
 	.home-thumb {
-		opacity: .15;
 		position: relative;
-		background: rgba($primary-color, 1);
 		overflow: hidden;
 		@include transition(all, 300ms, ease-in-out);
+		.thumb-overlay {
+			background: rgba($snow, .9);
+			position: absolute;
+			top: 0;
+			bottom: 0;
+			left: 0;
+			right: 0;
+			@include transition(all, 300ms, ease-in-out);
+		}
 		img {
 			max-width: 100% !important;
 		}
 		h2 {
-			background: rgba($primary-color, .9);
-			color: $white !important;
 			width: 100%;
 			position: absolute;
 			z-index: 800;
-			bottom: -200px;
+			bottom: 0;
 			color: $secondary-color;
 			padding: rem-calc(20);
 			margin: 0;
@@ -27,8 +32,11 @@
 
 		}
 		&:hover {
+			.thumb-overlay {
+				opacity: 0;
+			}
 			h2 {
-				bottom: 0;
+				bottom: -500px;
 			}
 			opacity: 1;
 			background: rgba($primary-color, .5);
@@ -42,8 +50,10 @@
 		opacity: 1;
 		h2 {
 			text-align: center;
+			top: 0;
 			bottom: 0;
-			font-size: $h3-font-size;
+			font-size: $h2-font-size;
+			// border-bottom: solid 5px rgba($primary-color, 1);
 		}
 	}
 }
@@ -53,6 +63,7 @@
 		opacity: 1;
 		h2 {
 			text-align: center;
+			top: 0;
 			bottom: 0;
 			font-size: $h3-font-size;
 		}
