--- a/scss/foundation.scss
+++ b/scss/foundation.scss
@@ -84,6 +84,7 @@
 @import "site/home";
 @import "site/article";
 @import "site/page";
+@import "site/404";
 //---------------------------
 @import "site/footer";
 
