Ajout style "Homepage"

--- a/scss/site/_home.scss
+++ b/scss/site/_home.scss
@@ -2,6 +2,16 @@
 // HOME PAGE
 
 @media #{$small-up} {
+	.pos-home-full {
+		position: fixed;
+		left: 0;
+		right: 0;
+		top: 0;
+		bottom: 0;
+		background-size: cover;
+		background-position: center;
+		@include transform (translateX, 66.66666%);
+	}
 	.home-thumb {
 		position: relative;
 		overflow: hidden;
