Mise à jour Favicon

--- a/scss/site/_article.scss
+++ b/scss/site/_article.scss
@@ -33,6 +33,9 @@
 		text-align: center;
 		// padding: rem-calc(0);
 		background: rgba($white, 1);
+		a {
+			text-decoration: none;
+		}
 		.icon-grid {
 			position: relative;
 			left: 2px;
