--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /*
 Theme Name:         Portfolio 2015
 Theme URI:          http://alexandrethiebaut.fr/
-Description:        FoundationPress is a WordPress starter theme based on Foundation 5 by Zurb
+Description:        This is my customed theme specially developped for my 2015 version's portfolio
 Version:            1.0
 Author:             Alexandre Thiebaut
 Author URI:         http://alexandrethiebaut.fr/
