--- a/scss/site/_article.scss
+++ b/scss/site/_article.scss
@@ -1,12 +1,12 @@
 @media #{$small-up} {
 	.padding-page {
 		padding-top: rem-calc(70);
-		padding-bottom: rem-calc(50);
+		padding-bottom: rem-calc(80);
 	}
 	.entry-content {
 		a {
 			text-decoration: none;
-			border-bottom: solid 2px rgba($primary-color, 1);
+			border-bottom: solid 2px rgba($primary-color, .5);
 		}
 	}
 	h1, h2 {
