--- a/scss/site/_home.scss
+++ b/scss/site/_home.scss
@@ -13,6 +13,7 @@
 		right: 0;
 		top: 0;
 		bottom: 0;
+		z-index: 2;
 		background-size: cover;
 		background-position: center;
 		@include transform (translateX, 66.66666%);
