--- a/scss/site/_page.scss
+++ b/scss/site/_page.scss
@@ -7,6 +7,7 @@
 		right: 0;
 		top: 0;
 		bottom: 0;
+		z-index: 2;
 		background-size: cover;
 		background-position: center;
 		@include transform (translateX, 66%);
